moved script for linking js link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Albert Tulo IV</title>
         <link rel="shortcut icon" type="img/jpg" href="./imgs/coding_icon.png">
         <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
+        <script src="./js/main.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@400;700&display=swap" rel="stylesheet">
