--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <h1>GitHub</h1>
                 <p>You can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/altuloiv" target="_blank">The Tech Academy Github</a></p>
+                    <p class="center"><a href="https://github.com/altuloiv" target="_blank">altuloiv's GitHub</a></p>
                 </p>
             </div>
             <!-- Right column -->
