--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                 <p>
                     I am a software developer who loves to code! I am a huge Car Enthusiast ontop of tech-geek. 
                     <br>
-                    <br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, Python, C# and more. 
+                    <br>I am a student of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, Python, C# and more. 
                     <br>
-                    <br>I am a full-stack developer and would love to work with you on your project. <a onclick="openForm()" class="contact">Contact</a> me below!
+                    <br>I am a full-stack developer and would love to work with you! 
                 </p>
             </div>
         </div>
@@ -133,12 +133,12 @@
                 <h1>GitHub</h1>
                 <p>You can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/altuloiv" target="_blank">altuloiv's GitHub</a></p>
+                    <p class="center"><a href="https://github.com/altuloiv"  target="_blank">altuloiv's GitHub</a></p>
                 </p>
             </div>
             <!-- Right column -->
             <div class="Column_2">
-                <a href="https://github.com/the-tech-academy" target="_blank"><img src="./imgs/github.png"></a>
+                <a href="https://github.com/altuloiv" target="_blank"><img src="./imgs/github.png" height="400px" width="400px"></a>
             </div>
         </div>
 
